--- a/src/Styles/Otp/Otp.css
+++ b/src/Styles/Otp/Otp.css
@@ -1,7 +1,8 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .otp-input-fields::-webkit-inner-spin-button, .otp-input-fields::-webkit-outer-spin-button {
