--- a/src/Styles/Style.css
+++ b/src/Styles/Style.css
@@ -1,10 +1,13 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .main-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
