--- a/src/Styles/tailwindcss.css
+++ b/src/Styles/tailwindcss.css
@@ -664,6 +664,22 @@ video {
   top: 50%;
 }
 
+.left-4 {
+  left: 1rem;
+}
+
+.top-8 {
+  top: 2rem;
+}
+
+.right-5 {
+  right: 1.25rem;
+}
+
+.top-5 {
+  top: 1.25rem;
+}
+
 .z-0 {
   z-index: 0;
 }
@@ -680,8 +696,8 @@ video {
   z-index: 2;
 }
 
-.z-\[3\] {
-  z-index: 3;
+.-z-\[1\] {
+  z-index: -1;
 }
 
 .mx-4 {
@@ -689,14 +705,18 @@ video {
   margin-right: 1rem;
 }
 
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
 
-.mx-6 {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
+.mb-16 {
+  margin-bottom: 4rem;
 }
 
 .ml-6 {
@@ -707,16 +727,16 @@ video {
   margin-top: 0.75rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .mt-6 {
   margin-top: 1.5rem;
 }
 
-.mb-16 {
-  margin-bottom: 4rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .flex {
@@ -783,20 +803,8 @@ video {
   height: 2px;
 }
 
-.h-\[3px\] {
-  height: 3px;
-}
-
-.h-\[40\%\] {
-  height: 40%;
-}
-
 .h-\[50\%\] {
   height: 50%;
-}
-
-.h-\[60\%\] {
-  height: 60%;
 }
 
 .h-\[60vh\] {
@@ -818,6 +826,14 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-\[440px\] {
+  height: 440px;
+}
+
+.h-\[3px\] {
+  height: 3px;
 }
 
 .max-h-0 {
@@ -880,20 +896,16 @@ video {
   width: 1px;
 }
 
-.w-\[300px\] {
-  width: 300px;
-}
-
-.w-\[3px\] {
-  width: 3px;
-}
-
 .w-auto {
   width: auto;
 }
 
 .w-full {
   width: 100%;
+}
+
+.w-\[3px\] {
+  width: 3px;
 }
 
 .min-w-\[200px\] {
@@ -916,6 +928,14 @@ video {
   max-width: 20rem;
 }
 
+.max-w-\[96px\] {
+  max-width: 96px;
+}
+
+.max-w-3xl {
+  max-width: 48rem;
+}
+
 .flex-shrink-0 {
   flex-shrink: 0;
 }
@@ -930,6 +950,11 @@ video {
 }
 
 .-translate-y-\[50\%\] {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-y-\[-50\%\] {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1201,6 +1226,11 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
+.border-\[\#D7D4CF\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(215 212 207 / var(--tw-border-opacity, 1));
+}
+
 .bg-\[\#F1F2F7\] {
   --tw-bg-opacity: 1;
   background-color: rgb(241 242 247 / var(--tw-bg-opacity, 1));
@@ -1330,14 +1360,14 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.py-7 {
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
+}
+
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.py-\[1px\] {
-  padding-top: 1px;
-  padding-bottom: 1px;
 }
 
 .py-\[5px\] {
@@ -1345,17 +1375,18 @@ video {
   padding-bottom: 5px;
 }
 
-.py-7 {
-  padding-top: 1.75rem;
-  padding-bottom: 1.75rem;
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.py-\[1px\] {
+  padding-top: 1px;
+  padding-bottom: 1px;
 }
 
 .pb-10 {
   padding-bottom: 2.5rem;
-}
-
-.pb-12 {
-  padding-bottom: 3rem;
 }
 
 .pb-14 {
@@ -1380,18 +1411,6 @@ video {
 
 .pb-7 {
   padding-bottom: 1.75rem;
-}
-
-.pb-\[75px\] {
-  padding-bottom: 75px;
-}
-
-.pl-1 {
-  padding-left: 0.25rem;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
 }
 
 .pl-4 {
@@ -1426,20 +1445,8 @@ video {
   padding-top: 2.5rem;
 }
 
-.pt-12 {
-  padding-top: 3rem;
-}
-
 .pt-2 {
   padding-top: 0.5rem;
-}
-
-.pt-20 {
-  padding-top: 5rem;
-}
-
-.pt-3 {
-  padding-top: 0.75rem;
 }
 
 .pt-4 {
@@ -1454,8 +1461,36 @@ video {
   padding-top: 1.5rem;
 }
 
+.pb-20 {
+  padding-bottom: 5rem;
+}
+
+.pt-24 {
+  padding-top: 6rem;
+}
+
+.pb-\[75px\] {
+  padding-bottom: 75px;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
 .pt-7 {
   padding-top: 1.75rem;
+}
+
+.pl-1 {
+  padding-left: 0.25rem;
+}
+
+.pt-12 {
+  padding-top: 3rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
 }
 
 .text-center {
@@ -1503,12 +1538,12 @@ video {
   line-height: 1.25rem;
 }
 
-.tracking-tight {
-  letter-spacing: -0.025em;
-}
-
 .tracking-wider {
   letter-spacing: 0.05em;
+}
+
+.tracking-tight {
+  letter-spacing: -0.025em;
 }
 
 .underline {
