--- a/src/Styles/tailwindcss.css
+++ b/src/Styles/tailwindcss.css
@@ -554,6 +554,44 @@ video {
   display: none;
 }
 
+:root {
+  --background: 0 0% 100%;
+  --foreground: 0 0% 3.9%;
+  --card: 0 0% 100%;
+  --card-foreground: 0 0% 3.9%;
+  --popover: 0 0% 100%;
+  --popover-foreground: 0 0% 3.9%;
+  --primary: 0 0% 9%;
+  --primary-foreground: 0 0% 98%;
+  --secondary: 0 0% 96.1%;
+  --secondary-foreground: 0 0% 9%;
+  --muted: 0 0% 96.1%;
+  --muted-foreground: 0 0% 45.1%;
+  --accent: 0 0% 96.1%;
+  --accent-foreground: 0 0% 9%;
+  --destructive: 0 84.2% 60.2%;
+  --destructive-foreground: 0 0% 98%;
+  --border: 0 0% 89.8%;
+  --input: 0 0% 89.8%;
+  --ring: 0 0% 3.9%;
+  --chart-1: 12 76% 61%;
+  --chart-2: 173 58% 39%;
+  --chart-3: 197 37% 24%;
+  --chart-4: 43 74% 66%;
+  --chart-5: 27 87% 67%;
+  --radius: 0.5rem
+  
+}
+
+* {
+  border-color: hsl(var(--border));
+}
+
+body {
+  background-color: hsl(var(--background));
+  color: hsl(var(--foreground));
+}
+
 .container {
   width: 100%;
 }
@@ -608,6 +646,15 @@ video {
   position: sticky;
 }
 
+.inset-0 {
+  inset: 0px;
+}
+
+.inset-x-0 {
+  left: 0px;
+  right: 0px;
+}
+
 .-bottom-\[100\%\] {
   bottom: -100%;
 }
@@ -624,6 +671,10 @@ video {
   left: 0px;
 }
 
+.left-4 {
+  left: 1rem;
+}
+
 .left-6 {
   left: 1.5rem;
 }
@@ -636,8 +687,8 @@ video {
   right: 0.75rem;
 }
 
-.right-6 {
-  right: 1.5rem;
+.right-5 {
+  right: 1.25rem;
 }
 
 .right-9 {
@@ -652,6 +703,10 @@ video {
   top: 0.75rem;
 }
 
+.top-5 {
+  top: 1.25rem;
+}
+
 .top-6 {
   top: 1.5rem;
 }
@@ -660,28 +715,24 @@ video {
   top: 1.75rem;
 }
 
-.top-\[50\%\] {
-  top: 50%;
-}
-
-.left-4 {
-  left: 1rem;
-}
-
 .top-8 {
   top: 2rem;
 }
 
-.right-5 {
-  right: 1.25rem;
+.top-\[50\%\] {
+  top: 50%;
 }
 
-.top-5 {
-  top: 1.25rem;
+.-z-\[1\] {
+  z-index: -1;
 }
 
 .z-0 {
   z-index: 0;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .z-\[10\] {
@@ -694,10 +745,6 @@ video {
 
 .z-\[2\] {
   z-index: 2;
-}
-
-.-z-\[1\] {
-  z-index: -1;
 }
 
 .mx-4 {
@@ -723,8 +770,16 @@ video {
   margin-left: 1.5rem;
 }
 
+.mt-24 {
+  margin-top: 6rem;
+}
+
 .mt-3 {
   margin-top: 0.75rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mt-5 {
@@ -735,8 +790,8 @@ video {
   margin-top: 1.5rem;
 }
 
-.mb-10 {
-  margin-bottom: 2.5rem;
+.mt-auto {
+  margin-top: auto;
 }
 
 .flex {
@@ -755,10 +810,6 @@ video {
   display: none;
 }
 
-.aspect-square {
-  aspect-ratio: 1 / 1;
-}
-
 .h-0 {
   height: 0px;
 }
@@ -773,6 +824,10 @@ video {
 
 .h-16 {
   height: 4rem;
+}
+
+.h-2 {
+  height: 0.5rem;
 }
 
 .h-24 {
@@ -803,6 +858,10 @@ video {
   height: 2px;
 }
 
+.h-\[440px\] {
+  height: 440px;
+}
+
 .h-\[50\%\] {
   height: 50%;
 }
@@ -828,12 +887,8 @@ video {
   height: 100vh;
 }
 
-.h-\[440px\] {
-  height: 440px;
-}
-
-.h-\[3px\] {
-  height: 3px;
+.h-\[120px\] {
+  height: 120px;
 }
 
 .max-h-0 {
@@ -852,8 +907,8 @@ video {
   max-height: 900px;
 }
 
-.min-h-\[200px\] {
-  min-height: 200px;
+.max-h-screen {
+  max-height: 100vh;
 }
 
 .min-h-screen {
@@ -892,6 +947,10 @@ video {
   width: 0.5px;
 }
 
+.w-\[100px\] {
+  width: 100px;
+}
+
 .w-\[1px\] {
   width: 1px;
 }
@@ -904,8 +963,8 @@ video {
   width: 100%;
 }
 
-.w-\[3px\] {
-  width: 3px;
+.w-8 {
+  width: 2rem;
 }
 
 .min-w-\[200px\] {
@@ -920,23 +979,27 @@ video {
   max-width: 400px;
 }
 
-.max-w-\[52\.7vh\] {
-  max-width: 52.7vh;
+.max-w-\[96px\] {
+  max-width: 96px;
 }
 
 .max-w-xs {
   max-width: 20rem;
 }
 
-.max-w-\[96px\] {
-  max-width: 96px;
+.max-w-sm {
+  max-width: 24rem;
 }
 
-.max-w-3xl {
-  max-width: 48rem;
+.flex-1 {
+  flex: 1 1 0%;
 }
 
 .flex-shrink-0 {
+  flex-shrink: 0;
+}
+
+.shrink-0 {
   flex-shrink: 0;
 }
 
@@ -973,14 +1036,6 @@ video {
   cursor: pointer;
 }
 
-.snap-y {
-  scroll-snap-type: y var(--tw-scroll-snap-strictness);
-}
-
-.snap-mandatory {
-  --tw-scroll-snap-strictness: mandatory;
-}
-
 .snap-start {
   scroll-snap-align: start;
 }
@@ -1009,10 +1064,6 @@ video {
   flex-direction: column;
 }
 
-.flex-wrap {
-  flex-wrap: wrap;
-}
-
 .items-start {
   align-items: flex-start;
 }
@@ -1023,10 +1074,6 @@ video {
 
 .items-center {
   align-items: center;
-}
-
-.justify-start {
-  justify-content: flex-start;
 }
 
 .justify-end {
@@ -1111,6 +1158,12 @@ video {
   row-gap: 0.75rem;
 }
 
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .self-stretch {
   align-self: stretch;
 }
@@ -1164,7 +1217,16 @@ video {
 }
 
 .rounded-sm {
-  border-radius: 0.125rem;
+  border-radius: calc(var(--radius) - 4px);
+}
+
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-t-\[10px\] {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .border {
@@ -1191,20 +1253,8 @@ video {
   border-left-width: 0px;
 }
 
-.border-l-\[0\.5px\] {
-  border-left-width: 0.5px;
-}
-
 .border-r-0 {
   border-right-width: 0px;
-}
-
-.border-r-\[0\.5px\] {
-  border-right-width: 0.5px;
-}
-
-.border-t {
-  border-top-width: 1px;
 }
 
 .border-dashed {
@@ -1214,6 +1264,11 @@ video {
 .border-\[\#3D3E40\] {
   --tw-border-opacity: 1;
   border-color: rgb(61 62 64 / var(--tw-border-opacity, 1));
+}
+
+.border-\[\#D7D4CF\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(215 212 207 / var(--tw-border-opacity, 1));
 }
 
 .border-black {
@@ -1226,9 +1281,9 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
-.border-\[\#D7D4CF\] {
+.border-gray-300 {
   --tw-border-opacity: 1;
-  border-color: rgb(215 212 207 / var(--tw-border-opacity, 1));
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
 }
 
 .bg-\[\#F1F2F7\] {
@@ -1241,9 +1296,31 @@ video {
   background-color: rgb(253 251 248 / var(--tw-bg-opacity, 1));
 }
 
+.bg-background {
+  background-color: hsl(var(--background));
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+}
+
+.bg-black\/80 {
+  background-color: rgb(0 0 0 / 0.8);
+}
+
+.bg-muted {
+  background-color: hsl(var(--muted));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-80 {
@@ -1278,6 +1355,10 @@ video {
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-6 {
+  padding: 1.5rem;
 }
 
 .px-10 {
@@ -1340,6 +1421,11 @@ video {
   padding-bottom: 0.625rem;
 }
 
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
@@ -1373,16 +1459,6 @@ video {
 .py-\[5px\] {
   padding-top: 5px;
   padding-bottom: 5px;
-}
-
-.py-24 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-}
-
-.py-\[1px\] {
-  padding-top: 1px;
-  padding-bottom: 1px;
 }
 
 .pb-10 {
@@ -1449,6 +1525,10 @@ video {
   padding-top: 0.5rem;
 }
 
+.pt-24 {
+  padding-top: 6rem;
+}
+
 .pt-4 {
   padding-top: 1rem;
 }
@@ -1461,36 +1541,8 @@ video {
   padding-top: 1.5rem;
 }
 
-.pb-20 {
-  padding-bottom: 5rem;
-}
-
-.pt-24 {
-  padding-top: 6rem;
-}
-
-.pb-\[75px\] {
-  padding-bottom: 75px;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
-.pt-7 {
-  padding-top: 1.75rem;
-}
-
-.pl-1 {
-  padding-left: 0.25rem;
-}
-
-.pt-12 {
-  padding-top: 3rem;
-}
-
-.pt-3 {
-  padding-top: 0.75rem;
+.pb-0 {
+  padding-bottom: 0px;
 }
 
 .text-center {
@@ -1501,9 +1553,28 @@ video {
   font-size: 10px;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
+.text-\[0\.70rem\] {
+  font-size: 0.70rem;
 }
 
 .font-bold {
@@ -1538,12 +1609,39 @@ video {
   line-height: 1.25rem;
 }
 
-.tracking-wider {
-  letter-spacing: 0.05em;
+.leading-none {
+  line-height: 1;
 }
 
 .tracking-tight {
   letter-spacing: -0.025em;
+}
+
+.tracking-wider {
+  letter-spacing: 0.05em;
+}
+
+.tracking-tighter {
+  letter-spacing: -0.05em;
+}
+
+.text-muted-foreground {
+  color: hsl(var(--muted-foreground));
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity, 1));
+}
+
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 .underline {
@@ -1577,6 +1675,10 @@ video {
   outline-offset: 2px;
 }
 
+.outline {
+  outline-style: solid;
+}
+
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
@@ -1593,14 +1695,54 @@ video {
   transition-duration: 500ms;
 }
 
+@keyframes enter {
+  from {
+    opacity: var(--tw-enter-opacity, 1);
+    transform: translate3d(var(--tw-enter-translate-x, 0), var(--tw-enter-translate-y, 0), 0) scale3d(var(--tw-enter-scale, 1), var(--tw-enter-scale, 1), var(--tw-enter-scale, 1)) rotate(var(--tw-enter-rotate, 0));
+  }
+}
+
+@keyframes exit {
+  to {
+    opacity: var(--tw-exit-opacity, 1);
+    transform: translate3d(var(--tw-exit-translate-x, 0), var(--tw-exit-translate-y, 0), 0) scale3d(var(--tw-exit-scale, 1), var(--tw-exit-scale, 1), var(--tw-exit-scale, 1)) rotate(var(--tw-exit-rotate, 0));
+  }
+}
+
+.duration-200 {
+  animation-duration: 200ms;
+}
+
+.duration-300 {
+  animation-duration: 300ms;
+}
+
+.duration-500 {
+  animation-duration: 500ms;
+}
+
 .hover\:bg-\[\#F3F1ED\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 241 237 / var(--tw-bg-opacity, 1));
 }
 
+@media (min-width: 640px) {
+  .sm\:overflow-hidden {
+    overflow: hidden;
+  }
+
+  .sm\:text-left {
+    text-align: left;
+  }
+}
+
 @media (min-width: 1024px) {
   .lg\:fixed {
     position: fixed;
+  }
+
+  .lg\:absolute {
+    position: absolute;
   }
 
   .lg\:right-\[31\%\] {
@@ -1634,6 +1776,10 @@ video {
 
   .lg\:gap-4 {
     gap: 1rem;
+  }
+
+  .lg\:overflow-hidden {
+    overflow: hidden;
   }
 
   .lg\:pb-10 {
